# Full-Stack-Web-Developer

./: .gitignore  README.md
Docker_for_Developer/1_imagens_e_containers/: Dockerfile  anotacoes.md  app.js  package-lock.json  package.json
Docker_for_Developer/2_volumes/: Dockerfile  anotacoes.md  index.php  process.php
Docker_for_Developer/3_networks/: anotacoes.md
Docker_for_Developer/3_networks/1_externa/: Dockerfile  app.py  response.json
Docker_for_Developer/3_networks/2_host/: Dockerfile
Docker_for_Developer/4_yaml/: app.py  test.yaml
Docker_for_Developer/5_docker_compose/: anotacoes.md
Docker_for_Developer/5_docker_compose/1_criacao_compose/: docker-compose.yml
Docker_for_Developer/5_docker_compose/2_variaveis_ambiente/: docker-compose.yml
Docker_for_Developer/6_kubernetes/: anotacoes.md
FastAPI/: .gitignore  anotacoes.md  database.db-shm  database.db-wal  get_ip.py  pyproject.toml
FastAPI/fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
FastAPI/fast_zero/routers/: auth.py  users.py
FastAPI/migrations/: env.py
FastAPI/migrations/versions/: 48ad6283cc24_create_users_table.py  bae54a19b799_add_updated_at_to_users_table.py
FastAPI/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
React_Next/calc_imc/: .gitignore  package.json
React_Next/projeto1/projeto1/: .aiexclude  (+8 more)
Typescript/: .gitignore  tsconfig.json
Typescript/src/: Globais.ts  aula02.ts  aula03.ts  aula04.ts  aula05.ts  aula06.ts  aula07.ts  aula08.ts  aula09.ts  aula10.ts  aula11.ts  aula12.ts  aula13.ts  aula14.ts  aula15.ts  aula16-19.ts  aula20-26.ts  aula27.ts  aula29.ts  aula32.ts  aula35-36.ts  aula37.ts
binance-monitor/: .gitignore  index.js  package.json  ticker-history.json
docker-nodejs/: Dockerfile.prod  docker-compose.yaml  index.js  package.json
monitor-docker/: custom.ini  docker-compose.yml  prometheus.yml
observar_logs_elastic_stack/: docker-compose.yaml
observar_logs_elastic_stack/nginx/: Dockerfile
opensearch/: docker-compose.yaml
projeto-react/: .gitignore  .prettierignore  .prettierrc  package-lock.json  package.json
projeto-react/arquivo/: Anotacoes.md  package.json
projeto-react/costs/: .gitignore  db.json  jsconfig.json  package.json
projeto-react/src/: App.js
traefik/: docker-compose.yaml
traefik/config/: dynamic.yaml  traefik.yaml
wordpress-docker/: docker-compose.yaml
(+99 files in other folders)
