[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Paulo Nievola",email = "luizpaulonievola@ymail.com"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length=75
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py --host 0.0.0.0 --port 5000'
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
